add git header and paragraph

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   ============================-->
   <section id="hero" class="wow fadeIn">
     <div class="hero-container">
-      <h1>Welcome to eStartup</h1>
+      <h1>Welcome to ACLC</h1>
       <h2>Elegant Bootstrap Template for Startups, Apps &amp; more...</h2>
       <img src="img/hero-img.png" alt="Hero Imgs">
       <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
@@ -95,8 +95,8 @@
     <div class="container">
       <div class="section-title text-center">
 
-        <h2>simple systeme fordiscount </h2>
-        <p class="separator">Integer cursus bibendum augue ac cursus .</p>
+        <h2>git tutorial</h2>
+        <p class="separator">version control</p>
 
       </div>
     </div>
